fixing tab alignment

--- a/style/about.css
+++ b/style/about.css
@@ -494,7 +494,7 @@ body {
         height: auto;
         margin-top: 8%;
         text-align: center;
-        margin-right: -30%;
+        margin-right: -50%;
     }
 }
 @media screen and (min-width: 481px) {
@@ -546,7 +546,7 @@ body {
         text-align: center;
         font-size: 20px;
         margin-top: 8%;
-        margin-right: -20%;
+        margin-right: -50%;
     }
 }
 @media screen and (min-width: 481px) {
